--- a/bar/navbar.html
+++ b/bar/navbar.html
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-color">
     <div class="container-fluid">
-        <a class="navbar-brand text-light" href="#">Navbar</a>
+        <a class="navbar-brand text-light" href="../page/index.html">Navbar</a>
         <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link text-light active te" aria-current="page" href="#">Home</a>
+                <a class="nav-link text-light active te" aria-current="page" href="../page/index.html">Home</a>
                 <a class="nav-link text-light" href="#">Features</a>
                 <a class="nav-link text-light" href="#">Pricing</a>
                 <a class="nav-link text-light disabled" aria-disabled="true">Disabled</a>
