--- a/bar/navbar.html
+++ b/bar/navbar.html
@@ -1,15 +1,24 @@
 <nav class="navbar navbar-expand-lg navbar-color">
     <div class="container-fluid">
-        <a class="navbar-brand text-light" href="../page/index.html">Navbar</a>
+        <a class="navbar-brand text-light" href="../page/index.html">บูธเกษตรแฟร์</a>
         <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link text-light active te" aria-current="page" href="../page/index.html">Home</a>
-                <a class="nav-link text-light" href="#">Features</a>
-                <a class="nav-link text-light" href="#">Pricing</a>
-                <a class="nav-link text-light disabled" aria-disabled="true">Disabled</a>
+                <a class="nav-link text-light active te" aria-current="page" href="../page/index.html">หน้าหลัก</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      เพิ่มเติม
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="../page/login.html">เข้าสู่ระบบ</a></li>
+                      <li><a class="dropdown-item" href="../page/register.html">สมัครสมาชิก</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="../page/booth.html">รายละเอียดบูธ</a></li>
+                    </ul>
+                  </li>
+                <a class="nav-link text-light" href="#">ติดต่อ</a>
             </div>
         </div>
     </div>
